# lms_backend

./: .dockerignore  .env.demo.azure.example  .env.demo.example  .env.demo.proxy.example  .env.example  .env.observability.example  .env.production.example  .env.staging.example  .firebaserc  .gitignore  Dockerfile  INTEGRATION_STATUS.md  README.md  RUNNING.md  alembic.ini  create_payment_module.py  create_websocket_module.py  docker-compose.demo.azure.yml  docker-compose.demo.proxy.yml  docker-compose.demo.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  firebase.json  health_check.py  implementation_plan.md  pyproject.toml  requirements.txt  restore_drill.bat  run.bat  run.ps1  run_demo_proxy_duckdns.bat  start_lms_complete.ps1  start_lms_full.bat  stop_demo_side_by_side.bat  test_backend.ps1  verify_integration.py
alembic/: env.enhanced.py  env.py  script.py.mako.enhanced
app/: main.py
docs/: 01-overview-ar.md  02-architecture-ar.md  03-setup-and-config-ar.md  04-modules-and-api-ar.md  05-database-and-data-model-ar.md  06-background-jobs-and-ops-ar.md  07-testing-and-quality-ar.md  08-api-documentation.md  08-demo-branch-ar.md  09-full-api-reference.md  09-project-deep-dive-ar.md  10-client-app-implementation-plan-ar.md  COMPLETE_MODULE_DOCUMENTATION.md  FULL_PROJECT_DOCUMENTATION.md  HOW_TO_BUILD_PROJECT.md  README.md
functions/: main.py  requirements.txt
postman/: LMS Backend DEMO.postman_collection.json  LMS Backend DEMO.postman_environment.json  LMS Backend DEMO.postman_runner_data.json  LMS Backend Demo.postman_collection.json  LMS Backend Demo.postman_environment.json  LMS Backend Production.postman_collection.json  LMS Backend Production.postman_environment.json  LMS Backend.postman_collection.json  LMS Backend.postman_environment.json  demo_seed_snapshot.demo.json  demo_seed_snapshot.json
reports/: final_test_results.json
scripts/: backup_db.bat  create_admin.py  create_instructor.py  deploy_azure_vm.ps1  deploy_azure_vm.sh  deploy_production.sh  generate_demo_postman.py  generate_module_migration.py  remove_backup_task.ps1  remove_restore_drill_task.ps1  restore_db.bat  run_demo.bat  run_demo.ps1  run_load_test.bat  run_load_test_realistic.bat  run_observability.bat  run_project.bat  run_project.ps1  run_restore_drill.ps1  run_staging.bat  seed_demo_data.py  setup_backup_task.ps1  setup_restore_drill_task.ps1  test_firebase_integration.py  test_smtp_connection.py  wait_for_db.py
tests/: conftest.py  helpers.py  test_admin_endpoints.py  test_all_endpoints.py  test_analytics.py  test_assignments.py  test_assignments_caching.py  test_assignments_complete.py  test_assignments_comprehensive_edges.py  test_assignments_edges.py  test_assignments_grading.py  test_assignments_minimal.py  test_auth.py  test_auth_cookie_router.py  test_basic_functionality.py  (+21 more)
(+380 files in other folders)
